Fix linter issues